tests/regression/error/hw4_error23.nex
var b;
var i;
 b = none;
 i = 2;
 if (i >= b)
 {
   print i;
 }
